<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainFon"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/tv_Main_Title" />

    <EditText
        android:id="@+id/etxtLogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/fontHintReg"
        android:hint="@string/etxt_Main_Login"
        android:autofillHints="Login" />

    <EditText
        android:id="@+id/etxtEmail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/fontHintReg"
        android:hint="@string/etxt_Main_Email"
        android:autofillHints="Email" />

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/fontHintReg"
        android:hint="@string/etxt_Main_Pass"
        android:autofillHints="Password" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn_Main_Registration"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/btnFonReg"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAuthLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter"
        android:text="@string/tv_Main_ToAuthLink"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
